Content Elements: Section Title added & styled; Latest Posts Column added & styled.

--- a/wp-content/themes/daddytales/src/scss/components/buttons.scss
+++ b/wp-content/themes/daddytales/src/scss/components/buttons.scss
@@ -18,3 +18,22 @@
         }
     }
 }
+
+.link {
+    position: relative;
+    font-size: $fs-lg;
+    font-weight: $fw-semibold;
+    color: $brand-yellow;
+
+    &:hover {
+        color: $brand-green
+    }
+
+    &::after {
+        content: '\f105';
+        font-family: 'Font Awesome 5 Free';
+        position: absolute;
+        top: 0;
+        right: -$spacer-md
+    }
+}
