--- a/wp-content/themes/daddytales/src/scss/main.scss
+++ b/wp-content/themes/daddytales/src/scss/main.scss
@@ -24,4 +24,6 @@
 
 // Unyson framework extensions styles.
 @import '../../../../plugins/unyson-framework-plugin/framework/extensions/shortcodes/shortcodes/section/static/css/styles';
-@import 'unyson/cwp-slider';
+@import 'unyson/cwp-slider/cwp-slider';
+@import 'unyson/cwp-title/cwp-title';
+@import 'unyson/cwp-latest-posts-column/cwp-latest-posts-column';
