--- a/wp-content/themes/daddytales/src/scss/components/form.scss
+++ b/wp-content/themes/daddytales/src/scss/components/form.scss
@@ -23,8 +23,6 @@ input,
 
     &:active,
     &:focus {
-        outline: none;
-        border-color: $brand-green;
-        color: $brand-green
+        outline: none
     }
 }
