--- a/wp-content/themes/daddytales/src/scss/components/vars.scss
+++ b/wp-content/themes/daddytales/src/scss/components/vars.scss
@@ -45,9 +45,11 @@ $light-2: #ddd;
 $black: #121212;
 $very-dark: #222;
 $dark: #3c3c3c;
+$dark-1: #424242;
 $gray: #5e5e5e;
 $brand-yellow: #ffd556;
-$brand-green: #01a231;
+$brand-blue: #6fc3d7;
+$brand-violet: #a669ac;
 
 // Spacers.
 $spacer-xs: 10px;
