--- a/wp-content/themes/daddytales/src/scss/header/header.scss
+++ b/wp-content/themes/daddytales/src/scss/header/header.scss
@@ -1,8 +1,8 @@
 .header {
     position: relative;
-    background-color: $brand-yellow;
+    background: linear-gradient(90deg, #ae6ea7, #a6c7f0);
     box-shadow: $shadow;
-    z-index: 1;
+    z-index: 10;
 
     &-inner {
         display: flex;
