--- a/wp-content/themes/daddytales/src/scss/header/search.scss
+++ b/wp-content/themes/daddytales/src/scss/header/search.scss
@@ -24,7 +24,7 @@
         transition: color ease-out $tr;
 
         &:hover {
-            color: $brand-green
+            color: $brand-violet
         }
     }
 }
