--- a/wp-content/themes/daddytales/src/scss/main.scss
+++ b/wp-content/themes/daddytales/src/scss/main.scss
@@ -24,6 +24,8 @@
 
 // Unyson framework extensions styles.
 @import '../../../../plugins/unyson-framework-plugin/framework/extensions/shortcodes/shortcodes/section/static/css/styles';
+@import 'unyson/section/section';
 @import 'unyson/cwp-slider/cwp-slider';
 @import 'unyson/cwp-title/cwp-title';
 @import 'unyson/cwp-latest-posts-column/cwp-latest-posts-column';
+@import 'unyson/cwp-cta/cwp-cta';
