--- a/wp-content/themes/daddytales/src/scss/unyson/cwp-slider/cwp-slider.scss
+++ b/wp-content/themes/daddytales/src/scss/unyson/cwp-slider/cwp-slider.scss
@@ -11,7 +11,8 @@
     }
 
     &-wrapper {
-        position: relative
+        position: relative;
+        z-index: 1
     }
 
     &-nav__button {
