--- a/wp-content/themes/daddytales/src/scss/components/base.scss
+++ b/wp-content/themes/daddytales/src/scss/components/base.scss
@@ -41,3 +41,12 @@ ul {
     min-height: 100vh;
     overflow: hidden
 }
+
+.img-cover-inside {
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        font-family: 'object-fit: cover;'
+    }
+}
