--- a/wp-content/themes/daddytales/src/scss/main.scss
+++ b/wp-content/themes/daddytales/src/scss/main.scss
@@ -22,6 +22,10 @@
 // Footer.
 @import 'footer/footer';
 
+// Common.
+@import 'common/auth-button';
+@import 'common/modal';
+
 // Unyson framework extensions styles.
 @import '../../../../plugins/unyson-framework-plugin/framework/extensions/shortcodes/shortcodes/section/static/css/styles';
 @import 'unyson/section/section';
@@ -29,3 +33,4 @@
 @import 'unyson/cwp-title/cwp-title';
 @import 'unyson/cwp-latest-posts-column/cwp-latest-posts-column';
 @import 'unyson/cwp-cta/cwp-cta';
+@import 'unyson/cwp-auth-forms/cwp-auth-forms';
