--- a/wp-content/themes/daddytales/src/scss/components/form.scss
+++ b/wp-content/themes/daddytales/src/scss/components/form.scss
@@ -1,15 +1,120 @@
 form {
-    position: relative
+    position: relative;
+
+    &.searchform {
+        input {
+            margin: 0
+        }
+    }
 }
 
-input,
-.input {
+.dt-form {
     width: 100%;
-    height: 40px;
+    max-width: 500px;
+    background-color: $white;
+    box-shadow: $shadow;
+    border-radius: $radius;
+    padding: $spacer-sm;
+    margin: 0 auto;
+    z-index: 1;
+
+    @media all and (min-width: $grid-sm) {
+        padding: $spacer-lg
+    }
+
+    &.disabled {
+        opacity: 0.75;
+        pointer-events: none
+    }
+
+    &-field {
+        margin-bottom: $spacer-sm;
+
+        &_checkbox {
+            label {
+                font-size: $fs-md;
+                font-weight: $fw-light;
+                color: $gray
+            }
+        }
+
+        &_button {
+            margin: $spacer-md 0;
+            text-align: center
+        }
+
+        &.hidden {
+            display: none
+        }
+
+        &.note {
+            text-align: center;
+            font-weight: $fw-semibold;
+            color: $brand-violet
+        }
+    }
+
+    &-links {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center
+    }
+
+    &-link {
+        position: relative;
+        margin-right: $spacer-md;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 3px;
+            right: -$spacer-xs;
+            width: 1px;
+            height: 85%;
+            background-color: $light-2
+        }
+
+        &:last-child {
+            margin-right: 0;
+
+            &::after {
+                display: none
+            }
+        }
+
+        a {
+            font-size: $fs-md;
+            font-weight: $fw-light;
+            color: $brand-blue;
+
+            &:hover {
+                color: $brand-violet
+            }
+        }
+    }
+
+    &-required {
+        color: $brand-violet
+    }
+}
+
+fieldset {
+    padding: 0;
+    margin: 0;
+    border: none
+}
+
+label {
+    font-weight: $fw-semibold
+}
+
+input, .input,
+textarea, .textarea {
+    width: 100%;
     font-family: $ff;
     font-size: $fs-md;
     color: $dark;
-    padding: 0 $spacer-xl 0 15px;
+    margin-top: 5px;
     border-radius: $radius;
     border: 1px solid $gray;
     transition:
@@ -25,4 +130,27 @@ input,
     &:focus {
         outline: none
     }
+}
+
+input, .input {
+    height: 40px;
+    padding: 0 $spacer-sm
+}
+
+textarea, .textarea {
+    height: 80px;
+    padding: $spacer-sm
+}
+
+input[type="checkbox"] {
+    width: $spacer-sm;
+    height: $spacer-sm;
+    margin: 0 5px 0 0
+}
+
+.disclaimer {
+    font-size: $fs-sm;
+    font-weight: $fw-light;
+    color: $gray;
+    text-align: center
 }
