--- a/wp-content/themes/daddytales/src/scss/components/typography.scss
+++ b/wp-content/themes/daddytales/src/scss/components/typography.scss
@@ -10,7 +10,7 @@ h5, h6 {
 h1 {
     font-size: 40px;
 
-    @media (min-width: $grid-md) {
+    @media all and (min-width: $grid-md) {
         font-size: 60px
     }
 }
@@ -18,7 +18,7 @@ h1 {
 h2 {
     font-size: 36px;
 
-    @media (min-width: $grid-md) {
+    @media all and (min-width: $grid-md) {
         font-size: 48px
     }
 }
@@ -26,7 +26,7 @@ h2 {
 h3 {
     font-size: 27px;
 
-    @media (min-width: $grid-md) {
+    @media all and (min-width: $grid-md) {
         font-size: 36px
     }
 }
@@ -34,7 +34,7 @@ h3 {
 h4 {
     font-size: $fs-xl;
 
-    @media (min-width: $grid-md) {
+    @media all and (min-width: $grid-md) {
         font-size: 27px
     }
 }
