--- a/wp-content/themes/daddytales/src/scss/profile/profile.scss
+++ b/wp-content/themes/daddytales/src/scss/profile/profile.scss
@@ -4,13 +4,17 @@
         flex-wrap: wrap;
         justify-content: space-between;
         background-color: $white;
-        padding: $spacer-lg;
+        padding: $spacer-sm;
         margin: $spacer-xl 0;
-        box-shadow: $shadow
+        box-shadow: $shadow;
+
+        @media all and (min-width: $grid-md) {
+            padding: $spacer-lg
+        }
     }
 
     &-sidebar {
-        width: 20%
+        width: 25%
     }
 
     &-avatar {
@@ -39,8 +43,17 @@
         color: $brand-violet
     }
 
+    &-bio {
+        font-size: $fs-md;
+        font-weight: $fw-light;
+        color: $gray;
+        margin-bottom: $spacer-xs;
+        padding-bottom: $spacer-md;
+        border-bottom: 1px solid $light
+    }
+
     &-content {
-        width: 75%;
+        width: 70%;
 
         &-inner {
             display: none;
@@ -71,6 +84,14 @@
         &.active {
             color: $brand-violet
         }
+
+        i {
+            width: 25px;
+            height: 25px;
+            text-align: center;
+            line-height: 25px;
+            margin-right: 5px
+        }
     }
 
     &-fields {
@@ -79,21 +100,13 @@
         &.disabled {
             opacity: 0.5
         }
-
-        .button {
-            background-color: $very-dark;
-            transition: background-color ease-out $tr;
-
-            &:hover {
-                background-color: $brand-blue
-            }
-        }
     }
 
     &-field {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: center;
         padding: $spacer-xs 0;
 
         &.hidden {
@@ -120,13 +133,58 @@
         }
 
         &-value {
+            display: flex;
+            align-items: center;
             width: 65%;
-            font-weight: $fw-semibold
+            font-weight: $fw-semibold;
+
+            a {
+                color: $brand-blue;
+
+                &:hover {
+                    color: $brand-violet
+                }
+            }
         }
 
         &-button {
             margin-top: $spacer-sm;
             justify-content: flex-end
+        }
+    }
+
+    // Invite form.
+    &-invite {
+        &.disabled {
+            opacity: 0.5
+        }
+    }
+}
+
+.not-logged-in-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: $spacer-lg;
+
+    @media all and (min-width: $grid-md) {
+        flex-direction: row;
+        flex-wrap: wrap
+    }
+
+    .button {
+        margin-bottom: $spacer-xs;
+
+        &:last-child {
+            margin-bottom: 0
+        }
+
+        @media all and (min-width: $grid-md) {
+            margin: 0 $spacer-xs 0 0;
+
+            &:last-child {
+                margin-right: 0
+            }
         }
     }
 }
