Profile is done. CPT Cartoon added, terms for cartoons added. Views count added to slider preview. 404 page Customizer options are added, structure and mobile view added too.

--- a/wp-content/themes/daddytales/src/scss/components/vars.scss
+++ b/wp-content/themes/daddytales/src/scss/components/vars.scss
@@ -49,6 +49,7 @@ $dark-1: #424242;
 $gray: #5e5e5e;
 $brand-yellow: #ffd556;
 $brand-blue: #6fc3d7;
+$brand-green: #4adda5;
 $brand-violet: #a669ac;
 
 // Spacers.
