Kinopoisk.ru API function addded to fill cartoon post type posts meta-fields. Footer CTA section added with Customizer settings.

--- a/wp-content/themes/daddytales/src/scss/main.scss
+++ b/wp-content/themes/daddytales/src/scss/main.scss
@@ -40,3 +40,6 @@
 @import 'unyson/cwp-latest-posts-column/cwp-latest-posts-column';
 @import 'unyson/cwp-cta/cwp-cta';
 @import 'unyson/cwp-auth-forms/cwp-auth-forms';
+
+// Cartoons.
+@import 'cartoon/single';
