--- a/wp-content/themes/daddytales/src/scss/footer/footer.scss
+++ b/wp-content/themes/daddytales/src/scss/footer/footer.scss
@@ -3,6 +3,11 @@
     box-shadow: $shadow;
     z-index: 10;
 
+    &-cta {
+        background: linear-gradient(90deg, #ae6ea7, #a6c7f0);
+        margin-top: $spacer-xl
+    }
+
     &-logo {
         margin-bottom: $spacer-md;
 
@@ -12,7 +17,7 @@
         }
 
         @media all and (min-width: $grid-xl) {
-            width: 20%;
+            width: 15%;
             text-align: left;
             margin-bottom: 0
         }
@@ -115,7 +120,7 @@
         }
 
         @media all and (min-width: $grid-xl) {
-            width: 15%
+            width: 20%
         }
 
         p {
