Cartoons: frames request and meta-field added. Frames slider added. Thumbnail full-size popup added. Frames slider full-size popup added with slider logic.

--- a/wp-content/themes/daddytales/src/scss/cartoon/single.scss
+++ b/wp-content/themes/daddytales/src/scss/cartoon/single.scss
@@ -38,6 +38,12 @@
             box-shadow: $shadow;
             overflow: hidden;
             margin: 0 auto;
+            cursor: pointer;
+            transition: opacity ease-out $tr;
+
+            &:hover {
+                opacity: 0.75
+            }
 
             img {
                 display: block;
