--- a/wp-content/themes/daddytales/src/scss/main.scss
+++ b/wp-content/themes/daddytales/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'components/buttons';
 @import 'components/form';
 @import 'components/404';
+@import 'components/sidebar';
 
 // Header.
 @import 'header/header';
@@ -26,6 +27,7 @@
 // Common.
 @import 'common/auth-button';
 @import 'common/modal';
+@import 'common/comments';
 
 // Profile.
 @import 'profile/profile';
@@ -45,3 +47,7 @@
 @import 'cartoon/single';
 @import 'cartoon/frames';
 @import 'cartoon/modal';
+
+// Archives.
+@import 'archive/archive';
+@import 'archive/pagination';
