Songs custom post type archive added. Song post preview changed.

--- a/wp-content/themes/daddytales/src/scss/main.scss
+++ b/wp-content/themes/daddytales/src/scss/main.scss
@@ -51,3 +51,7 @@
 // Archives.
 @import 'archive/archive';
 @import 'archive/pagination';
+
+// Songs.
+@import 'songs/songs';
+@import 'songs/song-preview';
