--- a/wp-content/themes/daddytales/src/scss/footer/footer.scss
+++ b/wp-content/themes/daddytales/src/scss/footer/footer.scss
@@ -4,8 +4,10 @@
     z-index: 10;
 
     &-cta {
+        position: relative;
         background: linear-gradient(90deg, #ae6ea7, #a6c7f0);
-        margin-top: $spacer-xl
+        margin-top: $spacer-xl;
+        z-index: 1
     }
 
     &-logo {
