Songs previews are changed, posts AJAX-pagination loads correct post preview depending on post type. Poems post type added. Some other small fixes.

--- a/wp-content/themes/daddytales/src/scss/profile/user.scss
+++ b/wp-content/themes/daddytales/src/scss/profile/user.scss
@@ -9,7 +9,11 @@
 
         &:hover,
         &.active {
-            color: $brand-violet
+            color: $brand-violet;
+
+            a {
+                color: $brand-violet
+            }
         }
 
         &_admin {
