All terms of current taxonomy are added to sidebar terms section. Random background color feature added to them and to column preview posts - as background color on hover. Sections: switch-option added to hide or show overlay. Small common fixes and refactoring.

--- a/wp-content/themes/daddytales/src/scss/archive/archive.scss
+++ b/wp-content/themes/daddytales/src/scss/archive/archive.scss
@@ -18,10 +18,12 @@
 .tax-content {
     width: 100%;
     order: 1;
+    margin-bottom: $spacer-xl;
 
     @media all and (min-width: $grid-xl) {
         width: 70%;
-        order: 2
+        order: 2;
+        margin-bottom: 0
     }
 }
 
