--- a/wp-content/themes/daddytales/src/scss/components/sidebar.scss
+++ b/wp-content/themes/daddytales/src/scss/components/sidebar.scss
@@ -23,6 +23,46 @@
         }
     }
 
+    &-terms {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start
+    }
+
+    &-term {
+        padding: 5px $spacer-sm;
+        border-radius: $radius;
+        box-shadow: $shadow;
+        margin: 0 $spacer-xs $spacer-xs 0;
+        color: $white;
+        font-weight: $fw-semibold;
+        transition: opacity ease-out $tr;
+
+        &:hover {
+            opacity: 0.75
+        }
+
+        &:last-child {
+            margin: 0
+        }
+
+        &.yellow {
+            background-color: $brand-yellow
+        }
+
+        &.blue {
+            background-color: $brand-blue
+        }
+
+        &.green {
+            background-color: $brand-green
+        }
+
+        &.violet {
+            background-color: $brand-violet
+        }
+    }
+
     &-posts {
         .latest-col-post {
             margin-bottom: $spacer-md;
