--- a/wp-content/themes/daddytales/src/scss/unyson/cwp-latest-posts-column/cwp-latest-posts-column.scss
+++ b/wp-content/themes/daddytales/src/scss/unyson/cwp-latest-posts-column/cwp-latest-posts-column.scss
@@ -144,8 +144,6 @@
         transition: background-color ease-out $tr;
 
         &:hover {
-            background-color: rgba(89, 224, 255, 0.1);
-
             .latest-col-post-info__title {
                 a {
                     color: $brand-violet
@@ -216,6 +214,30 @@
             width: 100%;
             height: 100%;
             z-index: 1
+        }
+
+        &.yellow {
+            &:hover {
+                background-color: rgba(255, 213, 86, 0.15)
+            }
+        }
+
+        &.blue {
+            &:hover {
+                background-color: rgba(111, 195, 215, 0.15)
+            }
+        }
+
+        &.green {
+            &:hover {
+                background-color: rgba(74, 221, 165, 0.15)
+            }
+        }
+
+        &.violet {
+            &:hover {
+                background-color: rgba(166, 105, 172, 0.15)
+            }
         }
     }
 
