Slides Tales custom post type added. Archive, single page with slider added. Simple posts archive and single post template are added.

--- a/wp-content/themes/daddytales/src/scss/components/base.scss
+++ b/wp-content/themes/daddytales/src/scss/components/base.scss
@@ -66,3 +66,11 @@ ul {
         padding: $spacer-lg
     }
 }
+
+.aligncenter {
+    text-align: center
+}
+
+.has-text-align-right {
+    text-align: right
+}
