--- a/wp-content/themes/daddytales/src/scss/components/typography.scss
+++ b/wp-content/themes/daddytales/src/scss/components/typography.scss
@@ -109,3 +109,24 @@ b, strong {
         }
     }
 }
+
+.wp-block-embed {
+    margin: $spacer-lg 0 0;
+
+    &.is-type-video {
+        text-align: center;
+
+        iframe {
+            display: inline-block;
+            width: 100%;
+            height: 300px;
+            border-radius: $radius;
+            overflow: hidden;
+            box-shadow: $shadow;
+
+            @media all and (min-width: $grid-md) {
+                width: 50%
+            }
+        }
+    }
+}
