--- a/wp-content/themes/daddytales/src/scss/slidestale/single.scss
+++ b/wp-content/themes/daddytales/src/scss/slidestale/single.scss
@@ -16,6 +16,10 @@
         margin: 0 -15px
     }
 
+    .slick-track {
+        display: flex !important
+    }
+
     .slick-dots {
         position: absolute;
         left: 0;
@@ -64,7 +68,11 @@
 }
 
 .slidestales-slide {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
     padding: 0 15px;
+    height: inherit;
 
     &-inner {
         display: flex;
