--- a/wp-content/themes/daddytales/src/scss/common/single.scss
+++ b/wp-content/themes/daddytales/src/scss/common/single.scss
@@ -76,6 +76,7 @@
     }
 
     &__prev {
+        margin-right: auto;
         transform: translateX(-100%);
 
         &::after {
@@ -105,6 +106,7 @@
     }
 
     &__next {
+        margin-left: auto;
         transform: translateX(100%);
 
         &::after {
