--- a/wp-content/themes/daddytales/src/scss/header/search.scss
+++ b/wp-content/themes/daddytales/src/scss/header/search.scss
@@ -2,6 +2,10 @@
     width: 100%;
 
     @media all and (min-width: $grid-md) {
+        max-width: 220px
+    }
+
+    @media all and (min-width: $grid-lg) {
         max-width: 350px
     }
 
