--- a/wp-content/themes/daddytales/src/scss/unyson/cwp-cta/cwp-cta.scss
+++ b/wp-content/themes/daddytales/src/scss/unyson/cwp-cta/cwp-cta.scss
@@ -34,11 +34,11 @@
         width: 100%;
 
         @media all and (min-width: $grid-md) {
-            width: 70%
+            width: 65%
         }
 
         @media all and (min-width: $grid-lg) {
-            width: 80%
+            width: 75%
         }
 
         @media all and (min-width: $grid-xl) {
@@ -72,16 +72,16 @@
     &-button {
         width: 100%;
         text-align: center;
-        margin-top: $spacer-xl;
+        margin-top: $spacer-sm;
 
         @media all and (min-width: $grid-md) {
-            width: 30%;
+            width: 35%;
             text-align: right;
             margin-top: 0
         }
 
         @media all and (min-width: $grid-lg) {
-            width: 20%
+            width: 25%
         }
     }
 }
